package com.codecool.oilcompany.data;

public enum Position {
    MANUAL_WORKER,
    MEDIC,
    MANAGER
}
