package com.codecool.oilcompany.extractor;

public interface FaultReporter {
    boolean isFaulty();
}
