package com.codecool.oilcompany.extractor;

public class FixedExtractor extends ExtractorWithLocation{

    public FixedExtractor(int capacity, int quantity, String location) {
        super(capacity, quantity, location);
    }
}
